styles/_header.scss
#header {
	box-sizing: border-box;
	padding: 1rem;
	position: fixed;
	width: 100%;
	z-index: 20;

	@supports (backdrop-filter: blur(10px)) {
		backdrop-filter: blur(10px);
	}

	@supports not (backdrop-filter: blur(10px)) {
		background-color: rgba(26, 9, 40, 0.3);
		border-bottom: 1px solid rgba(255, 255, 255, 0.2);
	}

	&__body {
		align-items: center;
		display: flex;
		justify-content: space-between;
		max-width: 1180px;
		margin: 0 auto;
	}

	.logo {
		font-size: 1.3rem;
		margin-left: 2rem;

		.black-and-white {
			display: none;
		}

		@media only screen and (min-width: 768px) {
			flex: 1;
			margin-left: 0;
		}

		@media only screen and(min-width: 993px) {
			flex: 2;
		}

		a {
			align-items: center;
			color: #fff;
			display: flex;
			justify-content: flex-start;
			text-decoration: none;
			width: 100%;

			span {
				margin-left: 1rem;
			}
		}
	}

	nav {
		&.nav--primary {
			background: linear-gradient(180deg, #a30fbb 0%, #1c124c 100%);
			height: 100vh;
			left: 0;
			opacity: 0;
			overflow-y: auto;
			position: fixed;
			top: 0;
			transform: translateX(-100vw);
			transition: all 300ms ease;
			width: 100vw;
			z-index: 10;

			@media only screen and (min-width: 768px) {
				background: none;
				flex: 5;
				height: auto;
				opacity: 1;
				position: relative;
				transform: none;
			}

			ul {
				align-items: center;
				display: flex;
				flex-direction: column;
				height: 100%;
				justify-content: center;

				@media only screen and(min-width: 768px) {
					flex-direction: row;
				}
			}

			a {
				border-bottom: 1px solid rgba(255, 255, 255, 0.1);
				color: #fff;
				display: block;
				font-size: 2.5rem;
				font-weight: 400;
				padding: 1.5rem 1rem;
				text-decoration: none;

				@media only screen and(min-width: 768px) {
					border-bottom: none;
					font-size: 0.8rem;
					padding: 0 0.5rem;
				}

				@media only screen and(min-width: 993px) {
					font-size: 0.9rem;
					font-weight: 700;
					padding: 0 1rem;
				}
			}

			&.visible {
				opacity: 1;
				transform: translateX(0);
			}
		}

		&.nav--secondary {
			@media only screen and(min-width: 768px) {
				flex: 2;
			}

			.link {
				color: #fff;
				font-size: 0.8rem;
				padding-right: 1rem;
				text-decoration: none;

				@media only screen and(min-width: 993px) {
					font-size: 0.9rem;
					font-weight: 700;
				}
			}

			ul {
				align-items: center;
				display: flex;
				flex-direction: row;
				justify-content: flex-end;
			}
		}

		ul,
		li {
			list-style-type: none;
			margin: 0;
			padding: 0;
		}
	}

	.nav-btn {
		border-radius: 1.5rem;
		font-size: 1rem;
		height: 2.2rem;
		line-height: 2.2rem;
		padding: 0;
		width: 2.2rem;

		@media only screen and (min-width: 768px) {
			display: none;
		}

		&--nav-open {
			color: #fff;
			font-weight: 400;

			span {
				transition: all 300ms ease;
			}

			&:active {
				span {
					transform: rotate(90deg);
				}
			}
		}

		&--nav-close {
			bottom: 1rem;
			overflow: hidden;
			position: fixed;
			right: 1rem;

			span {
				transition: all 300ms ease;
			}

			&:active {
				span {
					transform: rotate(360deg);
				}
			}
		}
	}
}

.subpage {
	#header {
		.logo {
			.colored {
				display: none;
			}

			.black-and-white {
				display: block;
			}

			a {
				color: #333;
			}
		}

		.nav-btn--nav-open {
			background: none;
			border: 2px solid #333;
			color: #333;

			span {
				display: block;
				margin-top: -2px;
			}
		}

		nav {
			a:not(.btn) {
				color: #333;
			}
			&.nav--primary {
				background: #f7f7f7;

				@media only screen and (min-width: 768px) {
					background: none;
				}

				a {
					border-bottom: 1px solid #eee;

					@media only screen and (min-width: 768px) {
						border-bottom: none;
					}
				}
			}
		}
	}
}

